# green-grids

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/: codecov.yml
.github/workflows/: build_wheels.yaml  python_app.yaml  test.yaml
c++/: CMakeLists.txt  common_defs.cpp  transformer.cpp
c++/green/: grids.h
c++/green/grids/: common_defs.h  except.h  itime_mesh_t.h  repn.h  sparse_data.h  transformer_t.h
cmake/: GreenDeps.cmake
data/cheb/: 100.h5  150.h5
data/ir/: 1e4.h5  1e5.h5  1e6.h5
python/: .flake8  .pylintrc  generate.py  requirements.txt
python/examples/: generate_and_transform.ipynb  ir_1e5.h5
python/green_grids/: __init__.py  sparse_data.py  transform.py
python/green_grids/repn/: basis.py  chebyshev.py  generator.py  ir.py  transformer.py
python/sparse_grid/: __init__.py  sparse_data.py  transform.py  utils.py
python/sparse_grid/repn/: chebyshev.py  generator.py  ir.py  transformer.py
python/tests/: OUTPUT  common.py  test_basis.py  test_generator.py  test_grid_files.py  test_module_functions.py  test_repn_transformer.py  test_sparse_data.py  test_transform.py  test_utils.py
test/: CMakeLists.txt  grids_test.cpp  tensor_test.h
test/data/: 1e4_old_incompatible.h5  test.h5  wrong_grid.h5
