project(grids-lib CXX)

find_package(Eigen3 3.3 NO_MODULE REQUIRED)
find_package(BLAS)
if (BLAS_FOUND)
    if (BLAS_LIBRARIES MATCHES ".*Accelerate")
        message(INFO " Using Apple BLAS")
    endif ()
    if (BLAS_LIBRARIES MATCHES ".*openblas")
        message(INFO " Using OpenBLAS")
        add_compile_definitions(USE_GEMM3M)
    endif ()
    add_compile_definitions(EIGEN_USE_BLAS)
endif ()

add_library(grids transformer.cpp
        common_defs.cpp)
target_include_directories(grids PUBLIC .)
target_link_libraries(grids PUBLIC GREEN::PARAMS GREEN::H5PP GREEN::NDARRAY Eigen3::Eigen)
target_compile_definitions(grids PUBLIC GRID_SRC_PATH="${grids_SOURCE_DIR}/data")
target_compile_definitions(grids PUBLIC GRID_INSTALL_PATH="${CMAKE_INSTALL_PREFIX}/share")
if (BLAS_FOUND)
    target_link_libraries(grids PUBLIC BLAS::BLAS)
endif (BLAS_FOUND)
